# snailcrypt-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  README.md
src/: main.rs
tests/: cli.rs
