[package]
name = "snailcrypt-cli"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "CLI client to access snailcrypt.com"
authors = [ "Richard Bäck <richard.baeck@snailcrypt.com>" ]
repository = "https://github.com/ritschmaster/snailcrypt"

[dependencies]
getopts = "0.2"
chrono = "0.4.23"
url = "2.3.1"
snailcrypt = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
